[metadata]
name = pyMFDR
version = 0.1.5
author = Yinsheng Zhang (Ph.D.)
author_email = oo@zju.edu.cn
description = A python package for MF (matrix factorization) based DR (dimensionality reduction) algorithms.  
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zhangys11/pyMFDR
project_urls =
    Bug Tracker = https://github.com/zhangys11/pyMFDR/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Mathematics

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    scikit-learn
    scipy
    uuid
    pandas
    matplotlib
    numpy
    seaborn
    statsmodels

[options.packages.find]
where = src